--- a/blog/source/_posts/二十大与网络安全行业的分析.md
+++ b/blog/source/_posts/二十大与网络安全行业的分析.md
@@ -1,6 +1,8 @@
 ---
 title: 二十大与网络安全行业的分析
-categories: 浪飒有感而发
+tags: 
+- 浪飒有感而发
+- 二十大
 ---
 
 ​	党的二十大已经召开，二十大报告总共分为了十五个部分，下面我将简单分析总结下十五个部分如何与网络安全、信息安全产生丝丝缕缕的联系。
